# illumina

./: .gitignore  .gitmodules  CMakeLists.txt  license.md  readme.md
.github/workflows/: bench-check.yml
boa/: CMakeLists.txt
cli/: CMakeLists.txt  cliapplication.cpp  cliapplication.h  commands.cpp  commands.h  main.cpp  searchtracer.cpp  searchtracer.h  state.cpp  state.h  ucioption.cpp  ucioption.h  uciserver.cpp  uciserver.h
datagen/: CMakeLists.txt  common.h  datagen_types.h  generator.h  logger.cpp  logger.h  main.cpp  mflowgen.cpp  mflowgen.h  normal.cpp  pipeline.cpp  pipeline.h  qnet.cpp  simulation.cpp  simulation.h  simulator.cpp  weighted_vector.h
datagen/extractors/: base_extractor.cpp  base_extractor.h
datagen/formatters/: marlinflow.cpp  marlinflow.h
datagen/pipelines/: default.json
datagen/selectors/: base_selector.cpp  base_selector.h
datagen/writers/: marlinflow.cpp  marlinflow.h
ext/: CMakeLists.txt
ext/argparse/: argparse.hpp
ext/fathom/: CMakeLists.txt
ext/fathom/src/: tbchess.c  tbconfig.h  tbprobe.c  tbprobe.h
ext/include/: searchtrace.h
ext/nlohmann/json/: json.hpp
ext/rang/: rang.h
illumina/: CMakeLists.txt  attacks.cpp  attacks.h  bench.cpp  board.cpp  board.h  boardutils.cpp  boardutils.h  clock.h  debug.h  endgame.cpp  endgame.h  evaluation.cpp  evaluation.h  history.h  illumina.cpp  illumina.h  magic_attacks.cpp  movegen.h  movegen_impl.h  movehistory.h  movepicker.cpp  movepicker.h  nnue.cpp  nnue.h  parsehelper.h  perft.cpp  perft.h  pext_attacks.cpp  search.cpp  search.h  searchdefs.h  searchtree.cpp  searchtree.h  staticlist.h  threadpool.cpp  threadpool.h  timemanager.cpp  timemanager.h  traceables.def  (+12 more)
illumina/net/: net.json
illumina/nn_layers/: accumulator.cpp  accumulator.h
ilumina/: CMakeLists.txt  board.cpp  board.h  debug.h  ilumina.cpp  ilumina.h  types.cpp  types.h
manual-baseline-source/: license.md
manual-baseline-source/ext/rang/: rang.h
manual-baseline-source/illumina/: attacks.cpp  attacks.h  bench.cpp  bench.h  board.cpp  boardutils.cpp  endgame.h  movegen.h  movehistory.h  movepicker.h  nnue.h  parsehelper.cpp  pext_attacks.cpp  search.h  transpositiontable.cpp  transpositiontable.h  tunablevalues.def  tunablevalues.h  utils.cpp  utils.h  zobrist.cpp  zobrist.h
manual-baseline-source/illumina/net/: net.json
openbench/: Makefile  bench.txt  illumina_bmi2
scripts/: apply-ob-tune.py
selfplay/: CMakeLists.txt  main.cpp  pgn.cpp  pgn.h
tests/: CMakeLists.txt  main.cpp  testsuite.cpp  testsuite.h
tests/suites/: attacks.cpp  board.cpp  boardutils.cpp  movepicker.cpp  parsehelper.cpp  perft.cpp  search.cpp  staticlist.cpp  types.cpp  utils.cpp
