set(cli_src main.cpp cliapplication.cpp cliapplication.h commands.h commands.cpp state.cpp state.h ucioption.h ucioption.cpp)

foreach (ARCH ${ARCHS})
    set(TARGET illumina_cli_${ARCH})
    add_executable(${TARGET} ${cli_src})
    apply_arch_options(${TARGET} ${ARCH})
    set_target_properties(${TARGET} PROPERTIES OUTPUT_NAME illumina_${ARCH})
    target_link_libraries(${TARGET} PRIVATE illumina_lib_${ARCH})
    target_include_directories(${TARGET} PRIVATE ${ILLUMINA_LIBRARY_SOURCE_DIR})
endforeach ()