foreach (ARCH ${ARCHS})
    set(TARGET datagen_${ARCH})
    add_executable(${TARGET} main.cpp simulation.cpp simulation.h formatters/marlinflow.cpp formatters/marlinflow.h selectors/base_selector.cpp selectors/base_selector.h datagen_types.h logger.cpp logger.h pipeline.cpp pipeline.h)
    apply_arch_options(${TARGET} ${ARCH})
    set_target_properties(${TARGET} PROPERTIES OUTPUT_NAME datagen_${ARCH})
    target_link_libraries(${TARGET} PRIVATE illumina_lib_${ARCH})
    target_include_directories(${TARGET} PRIVATE ${ILLUMINA_LIBRARY_SOURCE_DIR})
    target_compile_definitions(${TARGET} PUBLIC PIPELINE_PATH=\"${CMAKE_CURRENT_SOURCE_DIR}/pipelines/default.json\")
endforeach ()